Enhance waitlist form validations and update dependencies
- Added stricter input sanitization and enhanced anti-bot measures (rate-limiting, required time on page).
- Enhanced error handling with detailed messages for suspicious content, disposable emails, and invalid inputs.
- Updated dependencies, including Vite, Rollup, and related plugins for better stability and support.
- Updated Vite build configuration to disable sourcemaps.

--- a/index.html
+++ b/index.html
@@ -1,14 +1,66 @@
 <!doctype html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
-      <link rel="icon" href="/favicon.ico?v=2" sizes="any">
-      <link rel="icon" type="image/png" sizes="32x32" href="/collegium-website-logo.png?v=2">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Collegium</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+    <link rel="canonical" href="https://collegiumapp.com/" />
+
+    <meta name="robots" content="index,follow,max-image-preview:large" />
+
+    <link rel="icon" href="/favicon.ico?v=2" sizes="any">
+    <link rel="icon" type="image/png" sizes="32x32" href="/collegium-website-logo.png?v=2">
+    <meta name="theme-color" content="#0b0b0f">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <title>Collegium — Students only. Limited spots per campus.</title>
+    <meta name="description" content="Collegium is the student life network. Connect with your campus, discover exclusive events, and join trusted communities. Students only — limited spots per campus.">
+    <meta name="keywords" content="Collegium, student app, campus, events, student communities, social network">
+    <meta name="author" content="Collegium">
+
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Collegium">
+    <meta property="og:title" content="Collegium — Students only. Limited spots per campus.">
+    <meta property="og:description" content="Connect with your campus, discover events, join exclusive student communities.">
+    <meta property="og:image" content="https://collegiumapp.com/og-cover.jpg">
+    <meta property="og:url" content="https://collegiumapp.com/">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Collegium — Students only. Limited spots per campus.">
+    <meta name="twitter:description" content="The student life network for campuses.">
+    <meta name="twitter:image" content="https://collegiumapp.com/og-cover.jpg">
+
+    <!-- <link rel="preconnect" href="https://YOUR-PROJECT.supabase.co" crossorigin> -->
+
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "Organization",
+            "name": "Collegium",
+            "url": "https://collegiumapp.com",
+            "logo": "https://collegiumapp.com/logo.png",
+            "sameAs": [
+                "https://www.instagram.com/collegiumapp"
+            ]
+        }
+    </script>
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "WebSite",
+            "name": "Collegium",
+            "url": "https://collegiumapp.com",
+            "potentialAction": {
+                "@type": "SearchAction",
+                "target": "https://collegiumapp.com/search?q={query}",
+                "query-input": "required name=query"
+            }
+        }
+    </script>
+</head>
+
+<body>
+<div id="root"></div>
+<script type="module" src="/src/main.jsx"></script>
+</body>
 </html>
