Refactor components and improve UI/UX consistency
- Updated `Navbar`: Refined brand positioning, spacing, and adjusted layout for better responsiveness.
- Improved `App` layout: Added `min-h-screen` and `overflow-x-hidden` styles for a better viewport experience.
- Enhanced `Proof`: Integrated average RSVPs metric, optimized waitlist calculation with Supabase RPC, and refined stats display.
- Updated meta tags in `index.html` to reflect improved branding and description.

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/collegium-website-logo.png?v=2">
     <meta name="theme-color" content="#0b0b0f">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Collegium — Students only. Limited spots per campus.</title>
-    <meta name="description" content="Collegium is the student life network. Connect with your campus, discover exclusive events, and join trusted communities. Students only — limited spots per campus.">
+    <title>Collegium App — University Students only. Limited spots per campus.</title>
+    <meta name="description" content="Collegium is the student life network and nightlife. Connect with your campus, discover exclusive events, and join trusted communities. Students only — limited spots per campus.">
     <meta name="keywords" content="Collegium, student app, campus, events, student communities, social network">
     <meta name="author" content="Collegium">
     <meta property="og:type" content="website">
@@ -29,7 +29,7 @@
         {"@context":"https://schema.org","@type":"WebSite","name":"Collegium","url":"https://collegiumapp.com","potentialAction":{"@type":"SearchAction","target":"https://collegiumapp.com/search?q={query}","query-input":"required name=query"}}
     </script>
 </head>
-<body>
+<body class="overflow-x-hidden">
 <div id="root"></div>
 <script type="module" src="/src/main.jsx"></script>
 </body>
